frontend/test/should_fail/exact_001.grg
rule r {
    x:Node;
    exact();

	replace {
	}
}

